--- a/src/main/resources/hudson/ivy/IvyModuleSet/configure-entries.properties
+++ b/src/main/resources/hudson/ivy/IvyModuleSet/configure-entries.properties
@@ -20,3 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
+criteriaDescription=Should the post-build steps run only for successful builds, etc.
+runIfStable=Run only if build succeeds
+runIfSuccessful=Run only if build succeeds or is unstable
+runAlways=Run regardless of build result
